--- a/index.html
+++ b/index.html
@@ -10,41 +10,42 @@
 </head>
 <body>
     <!-- Header Start -->
-    <header class="hero">
+    <header class="hero pure-menu pure-menu-horizontal">
         <h1 class="title pure-menu-heading">What 2 Drink</h1>
-        <nav>
-            <ul class="pure-menu-list">
-                <li class="pure-menu-item">
-                    <button class="pure-button nav-button">What</button>
-                </li>
-                <li class="pure-menu-item">
-                    <button class="pure-button nav-button">How</button>
-                </li>
-                <li class="pure-menu-item">
-                    <button class="pure-button nav-button">Where</button>
-                </li>
-            </ul>
-        </nav>    
+        <ul class="pure-menu-list">
+            <li class="pure-menu-item">
+                <button class="pure-menu-link pure-button nav-button">What</button>
+            </li>
+            <li class="pure-menu-item">
+                <button class="pure-menu-link pure-button nav-button">How</button>
+            </li>
+            <li class="pure-menu-item">
+                <button class="pure-menu-link pure-button nav-button">Where</button>
+            </li>
+        </ul>   
     </header>
     <!-- Header End -->
 
     <!-- Main Start-->
     <main>
-        <div class="main-content-container">
-            <div id="image-container">
-                <img src="./assets/images/old-fashioned.webp" />
+        <div class="main-content-container pure-g">
+            <!-- Placeholder Content Start -->
+            <div id="image-container" class="pur-u-1-3">
+                <img />
             </div>
-            <div id="ingredients-container">
-                <h3 class="drink-name">OLD FASHIONED</h3>
-                <ul class="ingredients-list">
-                    <li>Bourbon or Rye, 2oz</li>
-                    <li>Orange Bitters, 2 dashes</li>
-                    <li>Simple Syrup, 1tsp</li>
-                    <li>Orange Peel</li>
-                </ul>
+            <div id="ingredients-container" class="pur-u-1-3">
+                <div>
+                    <h3 class="drink-name">OLD FASHIONED</h3>
+                    <ul class="ingredients-list">
+                        <li>Bourbon or Rye, 2oz</li>
+                        <li>Orange Bitters, 2 dashes</li>
+                        <li>Simple Syrup, 1tsp</li>
+                        <li>Orange Peel</li>
+                    </ul>
+                </div>
             </div>
-            <div id="intructions-container">
-                <h4 class="instructions">Instructions</h4>
+            <div id="intructions-container" class="pur-u-1-3">
+                <h3 class="instructions">Instructions</h3>
                 <ol class="instructions-list">
                     <li>Pour whiskey, bitters and syrup into stirring glass</li>
                     <li>Stir with ice until glass frosts on the outside ~ 20sec</li>
@@ -52,6 +53,7 @@
                     <li>Twist orange peel over drink to express oils, then place into glass</li>
                 </ol>
             </div>
+            <!-- Placeholder Content End -->
         </div>
     </main>
     <!-- Main End -->
