refined media queries and removed unused classes

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <!-- Header Start -->
-    <header class="hero pure-menu pure-menu-horizontal">
-        <h1 class="title pure-menu-heading">What 2 Drink</h1>
+    <header class="pure-menu pure-menu-horizontal">
+        <h1 class="pure-menu-heading">What 2 Drink</h1>
         <ul class="pure-menu-list">
             <li class="pure-menu-item">
-                <button class="pure-menu-link pure-button nav-button">What</button>
+                <button class="pure-menu-link pure-button">What</button>
             </li>
             <li class="pure-menu-item">
-                <button class="pure-menu-link pure-button nav-button">How</button>
+                <button class="pure-menu-link pure-button">How</button>
             </li>
             <li class="pure-menu-item">
-                <button class="pure-menu-link pure-button nav-button">Where</button>
+                <button class="pure-menu-link pure-button">Where</button>
             </li>
         </ul>   
     </header>
@@ -30,10 +30,10 @@
     <main>
         <div class="main-content-container pure-g">
             <!-- Placeholder Content Start -->
-            <div id="image-container" class="pur-u-1-3">
+            <div id="image-container" class="pur-u-1-4">
                 <img />
             </div>
-            <div id="ingredients-container" class="pur-u-1-3">
+            <div id="ingredients-container" class="pur-u-1-4">
                 <div>
                     <h3 class="drink-name">OLD FASHIONED</h3>
                     <ul class="ingredients-list">
@@ -44,7 +44,7 @@
                     </ul>
                 </div>
             </div>
-            <div id="intructions-container" class="pur-u-1-3">
+            <div id="intructions-container" class="pur-u-1-4">
                 <h3 class="instructions">Instructions</h3>
                 <ol class="instructions-list">
                     <li>Pour whiskey, bitters and syrup into stirring glass</li>
