--- a/index.html
+++ b/index.html
@@ -60,11 +60,16 @@
 
     <!-- Modals Start -->
     <div id="modal-container" class="">
-        <div id="what-modal" class="modal hide">
-            <h2 class="modal-title">What 2 Drink</h2>
-            <p class="modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum ipsum culpa, sed illum excepturi distinctio eius quia deleniti obcaecati earum voluptas eaque alias ut dolorem similique est, tenetur nam.</p>
-            <button class="pure-button modal-button cancel">Cancel</button>
-            <button class="pure-button modal-button confirm">Confirm</button>
+        <div id="random-modal" class="modal hide">
+            <div class="modal-content">
+                <h2 class="modal-title">Generate Random Cocktail Recipe</h2>
+                <p class="modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum ipsum culpa, sed illum excepturi distinctio eius quia deleniti obcaecati earum voluptas eaque alias ut dolorem similique est, tenetur nam.</p>
+                <p class="modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum ipsum culpa, sed illum excepturi distinctio eius quia deleniti obcaecati earum voluptas eaque alias ut dolorem similique est, tenetur nam.</p>
+            </div>
+            <div class="modal-btns">
+                <button id="random-cancel" class="pure-button modal-button cancel">Nah, Nevermind</button>
+                <button id="random-confirm" class="pure-button modal-button confirm">I'm Up For Anything!</button>
+            </div>
         </div>
 
         <div id="where-modal" class="modal hide">
