random drink displays with image, list of ingredients, and instructions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="pure-menu-heading">What 2 Drink</h1>
         <ul class="pure-menu-list">
             <li class="pure-menu-item">
-                <button id="random-btn" class="pure-menu-link pure-button">What</button>
+                <button id="random-btn" class="pure-menu-link pure-button">Surprise Me!</button>
             </li>
             <li class="pure-menu-item">
                 <button class="pure-menu-link pure-button">How</button>
