added split method to create instructions list

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </ul>
                 </div>
             </div>
-            <div id="intructions-container" class="pur-u-1-4">
+            <div id="instructions-container" class="pur-u-1-4">
                 <h3 class="instructions">Instructions</h3>
                 <ol class="instructions-list">
                     <li>Pour whiskey, bitters and syrup into stirring glass</li>
