--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="pure-menu-heading">What 2 Drink</h1>
         <ul class="pure-menu-list">
             <li class="pure-menu-item">
-                <button id="random-btn" class="pure-menu-link pure-button">Surprise Me!</button>
+                <button id="cocktail-btn" class="pure-menu-link pure-button">Cocktails</button>
             </li>
             <li class="pure-menu-item">
                 <button class="pure-menu-link pure-button">How</button>
@@ -60,15 +60,19 @@
 
     <!-- Modals Start -->
     <div id="modal-container" class="">
-        <div id="random-modal" class="modal hide">
+        <div id="cocktail-modal" class="modal hide">
             <div class="modal-content">
                 <h2 class="modal-title">Generate Random Cocktail Recipe</h2>
-                <p class="modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum ipsum culpa, sed illum excepturi distinctio eius quia deleniti obcaecati earum voluptas eaque alias ut dolorem similique est, tenetur nam.</p>
-                <p class="modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum ipsum culpa, sed illum excepturi distinctio eius quia deleniti obcaecati earum voluptas eaque alias ut dolorem similique est, tenetur nam.</p>
+                <p class="modal-text">
+                    Afraid of making a decision? 
+                    We got you covered! 
+                    By pressing the blue button below, we'll provide you with a random cocktail recipe. 
+                    We promise it'll be delicious.
+                </p>
             </div>
             <div class="modal-btns">
                 <button id="random-cancel" class="pure-button modal-button cancel">Nah, Nevermind</button>
-                <button id="random-confirm" class="pure-button modal-button confirm">I'm Up For Anything!</button>
+                <button id="random-confirm" class="pure-button modal-button confirm">Surprise Me!</button>
             </div>
         </div>
 
