--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What 2 Drink</title>
+    <title>Party Host</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/pure-min.css" />
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/grids-responsive-min.css" />
     <link rel="stylesheet" href="./assets/styles.css" />
@@ -11,16 +11,18 @@
 <body>
     <!-- Header Start -->
     <header class="pure-menu pure-menu-horizontal">
-        <h1 class="pure-menu-heading">What 2 Drink</h1>
+        <h1 class="pure-menu-heading">PARTY HOST</h1>
         <ul class="pure-menu-list">
+            <li class="pure-menu-item">
+                <button class="pure-menu-link pure-button">Music</button>
+            </li>
+
             <li class="pure-menu-item">
                 <button id="cocktail-btn" class="pure-menu-link pure-button">Cocktails</button>
             </li>
+            
             <li class="pure-menu-item">
-                <button class="pure-menu-link pure-button">How</button>
-            </li>
-            <li class="pure-menu-item">
-                <button class="pure-menu-link pure-button">Where</button>
+                <button class="pure-menu-link pure-button">Trivia</button>
             </li>
         </ul>   
     </header>
@@ -60,14 +62,22 @@
 
     <!-- Modals Start -->
     <div id="modal-container" class="">
+        <div id="music-modal" class="modal hide">
+            <h2 class="modal-title"></h2>
+            <p class="modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum ipsum culpa, sed illum excepturi distinctio eius quia deleniti obcaecati earum voluptas eaque alias ut dolorem similique est, tenetur nam.</p>
+            <button class="pure-button modal-button cancel">Cancel</button>
+            <button class="pure-button modal-button confirm">Confirm</button>
+        </div>
+
         <div id="cocktail-modal" class="modal hide">
             <div class="modal-content">
                 <h2 class="modal-title">Generate Random Cocktail Recipe</h2>
                 <p class="modal-text">
                     Afraid of making a decision? 
-                    We got you covered! 
+                    We got you covered!
+                </br>
                     By pressing the blue button below, we'll provide you with a random cocktail recipe. 
-                    We promise it'll be delicious.
+                    We promise it'll be delicious!
                 </p>
             </div>
             <div class="modal-btns">
@@ -76,15 +86,8 @@
             </div>
         </div>
 
-        <div id="where-modal" class="modal hide">
-            <h2 class="modal-title">Where 2 Drink</h2>
-            <p class="modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum ipsum culpa, sed illum excepturi distinctio eius quia deleniti obcaecati earum voluptas eaque alias ut dolorem similique est, tenetur nam.</p>
-            <button class="pure-button modal-button cancel">Cancel</button>
-            <button class="pure-button modal-button confirm">Confirm</button>
-        </div>
-
-        <div id="how-modal" class="modal hide">
-            <h2 class="modal-title">How 2 Drink</h2>
+        <div id="trivia-modal" class="modal hide">
+            <h2 class="modal-title"></h2>
             <p class="modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum ipsum culpa, sed illum excepturi distinctio eius quia deleniti obcaecati earum voluptas eaque alias ut dolorem similique est, tenetur nam.</p>
             <button class="pure-button modal-button cancel">Cancel</button>
             <button class="pure-button modal-button confirm">Confirm</button>
