added a search form along with function to fetch API

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                 <button id="random-cancel" class="pure-button modal-button cancel">Nah, Nevermind</button>
                 <button id="random-confirm" class="pure-button modal-button confirm">Surprise Me!</button>
             </div>
+            <form>
+                <h3 class="modal-title">Or do you have something specific in mind?</h3>
+                <input id="cocktail-by-name" placeholder="Enter cocktail name here..." class="user-input" />
+                <button id="cocktail-search-btn" type="submit">🔍</button>
+            </form>
         </div>
 
         <div id="trivia-modal" class="modal hide">
