--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <main>
         <div id="main-content-container" class="main-content-container pure-g">
             <!-- Placeholder Content Start -->
-            <div id="image-container" class="pur-u-1-4">
+            <div id="image-container" class="pure-u-4-10">
                 <img />
             </div>
-            <div id="ingredients-container" class="pur-u-1-4">
+            <div id="ingredients-container" class="pure-u-1-10">
                 <div>
                     <h3 class="drink-name">OLD FASHIONED</h3>
                     <ul class="ingredients-list">
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
             </div>
-            <div id="instructions-container" class="pur-u-1-4">
+            <div id="instructions-container" class="pure-u-5-10">
                 <h3 class="instructions">Instructions</h3>
                 <ol class="instructions-list">
                     <li>Pour whiskey, bitters and syrup into stirring glass</li>
@@ -70,30 +70,30 @@
         </div>
 
         <div id="cocktail-modal" class="modal hide">
-            <div id="random-cocktail-modal" class="modal-content hide">
-                <h2 class="modal-title">Generate Random Cocktail Recipe</h2>
+            <h2 class="modal-title">Generate Cocktail Recipe</h2>
+            <form id="cocktail-search-form" class="pure-form modal-content">
+                <fieldset class="pure-g">
+                    <label class="modal-text pure-u-4-10">Have something in mind?</label>
+                    <input id="cocktail-by-name" class="pure-u-5-10" name="cocktail-by-name" type="text" placeholder="Enter cocktail name here..." class="user-input" />
+                    <button id="cocktail-search-btn" class="pure-button pure-u-1-10" type="submit">🔍</button>
+                </fieldset>
+            </form>
+
+            <div id="random-cocktail-modal" class="modal-content">
+                <h3 class="modal-title secondary-title">Feeling Adventurous?</h3>
                 <p class="modal-text">
                     Up for an adventure? 
                     We got you covered!
                 </br>
-                    By pressing the green button below, we'll provide you with a random cocktail recipe. 
+                    By pressing the blue button below, we'll provide you with a random cocktail recipe. 
                     We promise it'll be delicious!
-                </br>
-                    Otherwise, press the blue button to search for a cocktail by name.
                 </p>
             </div>
-            
-            <div class="modal-btns hide">
+
+            <div class="modal-btns">
                 <button id="random-cancel" class="pure-button modal-button cancel">Nah, Nevermind</button>
-                <button id="switch-to-search" class="pure-button modal-button">Search By Name</button>
                 <button id="random-confirm" class="pure-button modal-button confirm">Surprise Me!</button>
             </div>
-
-            <form id="cocktail-search-form" class="modal-content">
-                <label class="modal-title">Have something in mind?</label>
-                <input class="" name="cocktail-by-name" id="cocktail-by-name" type="text" placeholder="Enter cocktail name here..." class="user-input" />
-                <button id="cocktail-search-btn" type="submit">🔍</button>
-            </form>
         </div>
 
         <div id="trivia-modal" class="modal hide">
