--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Party Host</title>
+    <title>Party Assist</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/pure-min.css" />
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/grids-responsive-min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -13,16 +13,14 @@
 <body>
     <!-- Header Start -->
     <header class="pure-menu pure-menu-horizontal">
-        <h1 class="pure-menu-heading">PARTY HOST</h1>
+        <h1 class="pure-menu-heading">PARTY ASSIST</h1>
         <ul class="pure-menu-list">
             <li class="pure-menu-item">
-                <button class="pure-menu-link pure-button">Music</button>
+                <button id="music-btn" class="pure-menu-link pure-button">Music</button>
             </li>
-
             <li class="pure-menu-item">
                 <button id="cocktail-btn" class="pure-menu-link pure-button">Cocktails</button>
-            </li>
-            
+            </li>          
             <li class="pure-menu-item">
                 <button class="pure-menu-link pure-button">Trivia</button>
             </li>
@@ -32,43 +30,96 @@
 
     <!-- Main Start-->
     <main>
-        <div id="main-content-container" class="main-content-container pure-g">
-            <!-- Placeholder Content Start -->
-            <div id="image-container" class="pure-u-4-10">
-                <img />
-            </div>
-            <div id="ingredients-container" class="pure-u-1-10">
-                <div>
-                    <h3 class="drink-name">OLD FASHIONED</h3>
-                    <ul class="ingredients-list">
-                        <li>Bourbon or Rye, 2oz</li>
-                        <li>Orange Bitters, 2 dashes</li>
-                        <li>Simple Syrup, 1tsp</li>
-                        <li>Orange Peel</li>
-                    </ul>
+        <div class="pure-u-5-24">
+            <iframe id="spotify-widget" class="l-box" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWYE5MI4mMuii" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>        
+        </div>
+        <!-- Placeholder Content Start -->
+        <div class="pure-u-18-24">
+            <div class="l-box">
+                <div id="main-content-container" class="main-content-container pure-g">
+                    <div id="image-container" class="pure-u-6-24">
+                        <img class="l-box" />
+                    </div>
+                    <div id="ingredients-container" class="pure-u-5-24">
+                        <div class="l-box">
+                            <h3 class="drink-name">OLD FASHIONED</h3>
+                            <ul class="ingredients-list">
+                                <li>Bourbon or Rye, 2oz</li>
+                                <li>Orange Bitters, 2 dashes</li>
+                                <li>Simple Syrup, 1tsp</li>
+                                <li>Orange Peel</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="instructions-container" class="pure-u-7-24">
+                        <div class="l-box">
+                            <h3 class="instructions">Instructions</h3>
+                            <ol class="instructions-list">
+                                <li>Pour whiskey, bitters and syrup into stirring glass</li>
+                                <li>Stir with ice until glass frosts on the outside ~ 20sec</li>
+                                <li>Strain into glass with fresh ice</li>
+                                <li>Twist orange peel over drink to express oils, then place into glass</li>
+                            </ol>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div id="instructions-container" class="pure-u-5-10">
-                <h3 class="instructions">Instructions</h3>
-                <ol class="instructions-list">
-                    <li>Pour whiskey, bitters and syrup into stirring glass</li>
-                    <li>Stir with ice until glass frosts on the outside ~ 20sec</li>
-                    <li>Strain into glass with fresh ice</li>
-                    <li>Twist orange peel over drink to express oils, then place into glass</li>
-                </ol>
-            </div>
-            <!-- Placeholder Content End -->
         </div>
+            <!-- Placeholder Content End -->
     </main>
     <!-- Main End -->
 
+    <!-- Music Start-->
+    <div class="container ">
+        <div>
+            <form action="">
+                <h1 class="music-header">Top 10 Songs</h1>
+                <input type="hidden" id='hidden_token'>
+                <div class=" form-group row  ">
+                    <label for="Genre" class="form-label ">Genre:</label>
+                    <select name="" id="select_genre" class="form-control">
+                        <option>Select...</option>                    
+                    </select>
+                </div>
+                <div class=" form-group ">
+                    <label for="Genre" class="form-label">Playlists:</label>
+                    <select name="" id="select_playlist" class="form-control ">
+                        <option>Select...</option>                    
+                    </select>
+                </div>                  
+                <div class="  form-group ">
+                    <button type="submit" id="btn_submit" class="btn ">Search</button>
+                </div>          
+            </form>        
+            <div class="row">
+                <div id="playlist-container" class="">
+                    <div class="song-list">
+                        
+                    </div>                                            
+                </div>
+                <div class="song-detail" id="song-detail">                
+                </div>
+            </div> 
+        </div>  
+    </div>
+    <!-- Music End -->
+
     <!-- Modals Start -->
-    <div id="modal-container" class="">
+    <div id="modal-container">
         <div id="music-modal" class="modal hide">
-            <h2 class="modal-title"></h2>
-            <p class="modal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum ipsum culpa, sed illum excepturi distinctio eius quia deleniti obcaecati earum voluptas eaque alias ut dolorem similique est, tenetur nam.</p>
-            <button class="pure-button modal-button cancel">Cancel</button>
-            <button class="pure-button modal-button confirm">Confirm</button>
+            <h2 class="modal-title">Choose a Playlist</h2>
+            <div id="playlist-button-container">
+                <button id="R&Rparty" value="37i9dQZF1DWYE5MI4mMuii">Rock & Roll Party</button>
+                <button id="LoFiBeats" value="0vvXsWCC9xrXsKd4FyS8kM">LoFi Hip Hop Beats</button>
+                <button id="Jazz2020" value="37i9dQZF1DWTtzPKJEaTC4">Best Jazz Songs of 2020</button>
+                <button id="Motown" value="5pAp9Q7ayzYXb74FWZBXTv">Motown Greatest Hits!</button>
+                <button id="Nu-Funk" value="37i9dQZF1DWZgauS5j6pMv">Nu-Funk</button>
+                <button id="Party-Hits" value="37i9dQZF1DXa2PvUpywmrr">Party Hits</button>
+                <button id="Brass-Bands" value="2HossUqdAoIhh2GTlrKI8n">Brass Bands</button>
+                <button id="90sHipHop" value="37i9dQZF1DX186v583rmzp">I Love My '90s Hip-Hop</button>
+                <button id="AllOut80s" value="37i9dQZF1DX4UtSsGT1Sbe">All Out 80s</button>
+            </div>
+            <button id="music-cancel" class="pure-button modal-button cancel">Cancel</button>
         </div>
 
         <div id="cocktail-modal" class="modal hide">
@@ -106,6 +157,9 @@
         </div>
     </div>
     <!-- Modals End -->
-    <script src="./assets/script.js"></script>
+
+    <script src="./assets/js/spotifyApi.js"></script>
+    <script src="./assets/js/player.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
