added header and style sheets to trivia.html

--- a/trivia.html
+++ b/trivia.html
@@ -4,23 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What 2 Drink</title>
+    <title>Party Assist</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/pure-min.css" />
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/grids-responsive-min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/styles.css" />
 </head>
 <body>
     <main id="trivia">
     <!-- Header Start -->
     <header class="pure-menu pure-menu-horizontal">
-        <h1 class="pure-menu-heading">What 2 Drink</h1>
+        <h1 class="pure-menu-heading">PARTY ASSIST</h1>
         <ul class="pure-menu-list">
             <li class="pure-menu-item">
-                <button id="cocktail-btn" class="pure-menu-link pure-button"><a href="index.html" >Cocktails</a></button>
+                <button id="music-btn" class="pure-menu-link pure-button">Music</button>
             </li>
             <li class="pure-menu-item">
-                <button class="pure-menu-link pure-button">How</button>
-            </li>
+                <button id="cocktail-btn" class="pure-menu-link pure-button">Cocktails</button>
+            </li>          
             <li class="pure-menu-item">
                 <button id="trivia-btn" class="pure-menu-link pure-button"><a href="trivia.html">Trivia</a></button>
             </li>
