Up dated Cocktails button

--- a/trivia.html
+++ b/trivia.html
@@ -21,7 +21,7 @@
                 <button id="music-btn" class="pure-menu-link pure-button">Music</button>
             </li>
             <li class="pure-menu-item">
-                <button id="cocktail-btn" class="pure-menu-link pure-button">Cocktails</button>
+                <button id="cocktail-btn" class="pure-menu-link pure-button"><a href="index.html">Cocktails</a></button>
             </li>          
             <li class="pure-menu-item">
                 <button id="trivia-btn" class="pure-menu-link pure-button"><a href="trivia.html">Trivia</a></button>
