added lost music modal styles

--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
         <div id="music-modal" class="modal hide">
             <h2 class="modal-title">Choose a Playlist</h2>
             <div id="playlist-button-container">
-                <button id="R&Rparty" value="37i9dQZF1DWYE5MI4mMuii">Rock & Roll Party</button>
-                <button id="LoFiBeats" value="0vvXsWCC9xrXsKd4FyS8kM">LoFi Hip Hop Beats</button>
-                <button id="Jazz2020" value="37i9dQZF1DWTtzPKJEaTC4">Best Jazz Songs of 2020</button>
-                <button id="Motown" value="5pAp9Q7ayzYXb74FWZBXTv">Motown Greatest Hits!</button>
-                <button id="Nu-Funk" value="37i9dQZF1DWZgauS5j6pMv">Nu-Funk</button>
-                <button id="Party-Hits" value="37i9dQZF1DXa2PvUpywmrr">Party Hits</button>
-                <button id="Brass-Bands" value="2HossUqdAoIhh2GTlrKI8n">Brass Bands</button>
-                <button id="90sHipHop" value="37i9dQZF1DX186v583rmzp">I Love My '90s Hip-Hop</button>
-                <button id="AllOut80s" value="37i9dQZF1DX4UtSsGT1Sbe">All Out 80s</button>
+                <button class="playlist-btn pure-button" id="R&Rparty" value="37i9dQZF1DWYE5MI4mMuii">Rock & Roll Party</button>
+                <button class="playlist-btn pure-button" id="LoFiBeats" value="0vvXsWCC9xrXsKd4FyS8kM">LoFi Hip Hop Beats</button>
+                <button class="playlist-btn pure-button" id="Jazz2020" value="37i9dQZF1DWTtzPKJEaTC4">Best Jazz Songs of 2020</button>
+                <button class="playlist-btn pure-button" id="Motown" value="5pAp9Q7ayzYXb74FWZBXTv">Motown Greatest Hits!</button>
+                <button class="playlist-btn pure-button" id="Nu-Funk" value="37i9dQZF1DWZgauS5j6pMv">Nu-Funk</button>
+                <button class="playlist-btn pure-button" id="Party-Hits" value="37i9dQZF1DXa2PvUpywmrr">Party Hits</button>
+                <button class="playlist-btn pure-button" id="Brass-Bands" value="2HossUqdAoIhh2GTlrKI8n">Brass Bands</button>
+                <button class="playlist-btn pure-button" id="90sHipHop" value="37i9dQZF1DX186v583rmzp">I Love My '90s Hip-Hop</button>
+                <button class="playlist-btn pure-button" id="AllOut80s" value="37i9dQZF1DX4UtSsGT1Sbe">All Out 80s</button>
             </div>
             <button id="music-cancel" class="pure-button modal-button cancel">Cancel</button>
         </div>
