added recent cocktail search buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Main Start-->
     <main>
         <div class="pure-u-5-24">
-            <iframe id="spotify-widget" class="l-box" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWYE5MI4mMuii" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>        
+            <!-- <iframe id="spotify-widget" class="l-box" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWYE5MI4mMuii" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>         -->
         </div>
         <!-- Placeholder Content Start -->
         <div class="pure-u-18-24">
@@ -132,6 +132,7 @@
                     <input id="cocktail-by-name" class="pure-u-5-10" name="cocktail-by-name" type="text" placeholder="Enter cocktail name here..." class="user-input" />
                     <button id="cocktail-search-btn" class="pure-button pure-u-1-10" type="submit">🔍</button>
                 </fieldset>
+                <div id="cocktail-search-history"></div>
             </form>
 
             <div id="random-cocktail-modal" class="modal-content">
@@ -154,6 +155,6 @@
 
     <script src="./assets/js/spotifyApi.js"></script>
     <script src="./assets/js/player.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/cocktails.js"></script>
 </body>
 </html>
