added fetch to cocktailBtnHandler

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                     <input id="cocktail-by-name" class="pure-u-5-10" name="cocktail-by-name" type="text" placeholder="Enter cocktail name here..." class="user-input" />
                     <button id="cocktail-search-btn" class="pure-button pure-u-1-10" type="submit">🔍</button>
                 </fieldset>
+                <div class="modal-text">Recent cocktails:</div>
                 <div id="cocktail-search-history"></div>
             </form>
 
@@ -146,8 +147,8 @@
             </div>
 
             <div class="modal-btns">
-                <button id="random-cancel" class="pure-button modal-button cancel">Nah, Nevermind</button>
                 <button id="random-confirm" class="pure-button modal-button confirm">Surprise Me!</button>
+                <button id="random-cancel" class="pure-button modal-button cancel">Nah, Nevermind</button>
             </div>
         </div>    
     </div>
