--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Main Start-->
     <main>
         <div class="pure-u-5-24">
-            <!-- <iframe id="spotify-widget" class="l-box" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWYE5MI4mMuii" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>         -->
+            <iframe id="spotify-widget" class="l-box" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWYE5MI4mMuii" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>        
         </div>
         <!-- Placeholder Content Start -->
         <div class="pure-u-18-24">
