--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Main Start-->
     <main>
         <div class="pure-u-5-24">
-            <!-- <iframe id="spotify-widget" class="l-box" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWYE5MI4mMuii" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>         -->
+            <iframe id="spotify-widget" class="l-box" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWYE5MI4mMuii" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>        
         </div>
         <!-- Placeholder Content Start -->
         <div class="pure-u-18-24">
@@ -72,7 +72,7 @@
     <!-- Main End -->
 
     <!-- Music Start-->
-    <div class="container ">
+    <!-- <div class="container ">
         <div>
             <form action="">
                 <h1 class="music-header">Top 10 Songs</h1>
@@ -103,7 +103,7 @@
                 </div>
             </div> 
         </div>  
-    </div>
+    </div> -->
     <!-- Music End -->
 
     <!-- Modals Start -->
