hiding the 'Play Trivia' button when trivia starts

--- a/trivia.html
+++ b/trivia.html
@@ -30,9 +30,10 @@
     </header>
     <!-- Header End -->
 
-    <h1 class="modal-title">Trivia Trial</h1>
-    <button id="trivia-start-button">Play Trivia!</button>
-    <div id="trivia-content"></div>
+    <h1 class="modal-title">Trivia</h1>
+    <div id="trivia-content">
+        <button id="trivia-start-button">Play Trivia!</button>
+    </div>
     <script src="./assets/trivia.js"></script>
     </main>
     </body>
