HTML feedback for correct and incorrect answers

--- a/trivia.html
+++ b/trivia.html
@@ -31,8 +31,13 @@
     <!-- Header End -->
 
     <h1 class="modal-title">Trivia</h1>
-    <div id="trivia-content">
+    <div id="trivia-container">
         <button id="trivia-start-button">Play Trivia!</button>
+        
+        <div id="trivia-content"></div>
+
+        <div id="correct-answer-text" class="hide">Correct!</div>
+        <div id="wrong-answer-text" class="hide">Incorrect!</div>
     </div>
     <script src="./assets/trivia.js"></script>
     </main>
