user can restart trivia at the end, creating an endless play cycle

--- a/trivia.html
+++ b/trivia.html
@@ -32,6 +32,7 @@
 
     <h1 class="modal-title">Trivia</h1>
     <div id="trivia-container">
+        <h2 id="trivia-header" class="hide">Thanks for playing!</h2>
         <button id="trivia-start-button">Play Trivia!</button>
         
         <div id="trivia-content"></div>
