progress on main-content styles, getting rid of PureCSS framework

--- a/index.html
+++ b/index.html
@@ -35,37 +35,34 @@
 
     <!-- Main Start-->
     <main>
-        <!-- Placeholder Content Start -->
-        <div class="">
-            <div id="main-content-container" class="main-content-container pure-g">
-                <div id="image-container" class="pure-u-6-24">
-                    <img class="cocktail-image" />
-                </div>
-                <div id="ingredients-container" class="pure-u-5-24">
-                    <div class="">
-                        <h3 class="drink-name">OLD FASHIONED</h3>
-                        <ul class="ingredients-list">
-                            <li>Bourbon or Rye, 2oz</li>
-                            <li>Orange Bitters, 2 dashes</li>
-                            <li>Simple Syrup, 1tsp</li>
-                            <li>Orange Peel</li>
-                        </ul>
-                    </div>
-                </div>
-                <div id="instructions-container" class="pure-u-7-24">
-                    <div class="">
-                        <h3 class="instructions">Instructions</h3>
-                        <ol class="instructions-list">
-                            <li>Pour whiskey, bitters and syrup into stirring glass</li>
-                            <li>Stir with ice until glass frosts on the outside ~ 20sec</li>
-                            <li>Strain into glass with fresh ice</li>
-                            <li>Twist orange peel over drink to express oils, then place into glass</li>
-                        </ol>
-                    </div>
-                </div>
+        <div id="main-content-container" class="main-content-container">
+
+            <!-- Placeholder Content Start -->
+            <div id="image-container" class="">
+                <h2 class="drink-name">OLD FASHIONED</h2>
+                <img class="cocktail-image" />
             </div>
+            <div id="ingredients-container" class="">
+                <h3 class="ingredients">ingredients</h3>
+                <ul class="ingredients-list">
+                    <li>Bourbon or Rye, 2oz</li>
+                    <li>Orange Bitters, 2 dashes</li>
+                    <li>Simple Syrup, 1tsp</li>
+                    <li>Orange Peel</li>
+                </ul>
+            </div>
+            <div id="instructions-container" class="">
+                <h3 class="instructions">Instructions</h3>
+                <ol class="instructions-list">
+                    <li>Pour whiskey, bitters and syrup into stirring glass</li>
+                    <li>Stir with ice until glass frosts on the outside ~ 20sec</li>
+                    <li>Strain into glass with fresh ice</li>
+                    <li>Twist orange peel over drink to express oils, then place into glass</li>
+                </ol>
+            </div>
+            <!-- Placeholder Content End -->
+
         </div>
-        <!-- Placeholder Content End -->
     </main>
     <!-- Main End -->
 
