more responsive styles for cocktail recipe

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <img class="cocktail-image" />
             </div>
             <div id="ingredients-container" class="">
-                <h3 class="ingredients">ingredients</h3>
+                <h3 class="ingredients">Ingredients</h3>
                 <ul class="ingredients-list">
                     <li>Bourbon or Rye, 2oz</li>
                     <li>Orange Bitters, 2 dashes</li>
